--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.menu {
+  background-color: #F1F2EC !important;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position: fixed;
+  width: 100%;
+  z-index: 100;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar {
+  width: 100%;
+  top: 0;
+  position: fixed;
+  z-index: 100;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (max-width: 40em) {
+  .menu {
+    background-color: grey !important;
+    }
+}
+
+/* Home Page */
+.box{
+  width: 100%;
+  height: 100%;            
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 100;  
+  z-index: 0;
+}
+.stack-top{
+  z-index: 9;
+  /* margin: 20px; */
+  height: 100%;
+}
+
+.typeit-script{
+  z-index: 9;
+}
+
+.home-info{
+  text-align: center;
+  margin: 100px;
+  z-index: 9 !important;
+}
+
+.home-name{
+  z-index: 9 !important;
+  font-weight: 100000;
+  font-size: 55px;
+  font-family: "Montserrat,Helvetica,sans-serif";
+}
+
+.home-description{
+  z-index: 9 !important;
+  font-size: 40px;
+  font-family: "Montserrat,Helvetica,sans-serif";
+}
+
+@media only screen and (max-width: 40em){
+  .home-name{
+    font-size: 25px;
   }
-  to {
-    transform: rotate(360deg);
+  .home-description{
+    font-size: 20px;
   }
+}
+
+/* About */
+
+.about-page{
+  text-align: center;
 }
