--- a/src/App.css
+++ b/src/App.css
@@ -114,7 +114,7 @@
 @media only screen and (max-width: 40em){
   .resume-box{
     width: 100%;
-    height: 250%;            
+    height: 300%;            
     position: absolute;
     top: 0;
     left: 0;
@@ -139,4 +139,23 @@
   /* text-align: center; */
 }
 
-/* Resume ------- Education */
+/* Blogs */
+.blog-title{
+  z-index: 9 !important;
+  font-weight: 100000;
+  font-size: 55px;
+  font-family: "Montserrat,Helvetica,sans-serif";
+}
+
+/* Contact Me */
+.contact-title{
+  z-index: 9 !important;
+  font-weight: 100000;
+  font-size: 55px;
+  font-family: "Montserrat,Helvetica,sans-serif";
+  text-align: center;
+}
+
+.contact-image{
+  height: 100px;
+}
