--- a/src/App.css
+++ b/src/App.css
@@ -103,7 +103,8 @@
 
 .resume-box{
   width: 100%;
-  height: 200%;            
+  /* height: 210%;             */
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
@@ -114,7 +115,8 @@
 @media only screen and (max-width: 40em){
   .resume-box{
     width: 100%;
-    height: 300%;            
+    /* height: 310%; */
+    height: 100%;            
     position: absolute;
     top: 0;
     left: 0;
